# gastown

./: .beads-credential-key  .dockerignore  .events 2.jsonl  .events.jsonl  .gitattributes  .gitignore  .golangci.yml  .goreleaser.fork.yml  .goreleaser.yml  AGENTS.md  ARTISAN_ARCHITECTURE.md  BRANCH_REVIEW_PROMPT.md  BUG-formula-path-resolution.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_ANALYSIS.md  CONTINUITY_CLAUDE-gastown-gui.md  CONTRIBUTING.md  CREW.md  DESIGN-agent-init.md  DOTGASTOWN_ARCHITECTURE.md  DRAFT_GITIGNORE.txt  Dockerfile  Dockerfile.daytona  Dockerfile.e2e  ESTOP  ESTOP.herald  ESTOP.vitalitek  FEATURE-PROPOSAL.md  FILE_AFTER_FAIL.md  FILE_INVENTORY.md  GETTING-STARTED.md  LICENSE  MEDIAFORGE_OPTIMIZATION_RESEARCH.md  MURDER_INVESTIGATION.md  Makefile  OPENCODE_FIX.md  OPENCODE_IMPACT_ANALYSIS.md  (+46 more)
.beads/: .gitignore  PRIME.md  README.md  config.yaml  issues.jsonl  routes.jsonl  sync-state.json  sync_base.jsonl
.claude/: settings.local.json
.cursor/: README.md
.designs/: distributed-workflow-steps.md  rate-limit-reset.md
.gastown/: settings.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.gt/: rig.toml
.kamal/: secrets
.llm-doctor/: last-diagnosis
.opencode/: opencode-sync.json
.repo.git/: config  index
.sageox/: .gitignore  .repo_019cdb2f-d991-7327-978d-08eb5ee015f6  README.md  config.json
.specs/: rally-tavern-phase1-plan.md
agents/: gemini-agent  gpt4o  imagen  (+3 more)
lib/: __init__.py  nats_client.py  pyproject.toml
lib/tests/: __init__.py  test_nats_client.py
(+4291 files in other folders)
